# codechart

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  development_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_lm_studio.py  test_lm_studio_debug.py
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: default.yaml
data/test_simple/: calc.c
docs/: architecture.md  tech_research.md
issues/: epic-01-basic-pipeline.md  epic-02-static-analysis.md  epic-03-documentation.md  epic-04-optimization.md  issue-001-project-setup.md  issue-002-code-chunker.md  issue-003-llm-analyzer.md  issue-004-output-formatter.md  issue-005-cjson-verification.md
src/: __init__.py  ast_parser.py  cli.py  code_chunker.py  code_loader.py  config.py  llm_analyzer.py  orchestrator.py  output_formatter.py  prompt_templates.py  response_validator.py  retry_strategy.py  token_counter.py
templates/: file_detail.md.j2  project_summary.md.j2
tests/: __init__.py  test_ast_parser.py  test_cli.py  test_code_chunker.py  test_code_loader.py  test_config.py  test_llm_analyzer.py  test_orchestrator.py  test_output_formatter.py  test_placeholder.py  test_response_validator.py  test_token_counter.py
